--- a/views/layout.pug
+++ b/views/layout.pug
@@ -8,11 +8,11 @@ html(lang="en")
   body
     .navbar
       a(href='/' target="_blank")
-        h1.logo Baziga
+        h1.logo Bazinga
       .nav-items
         block nav
     p#safari Your browser doesn't support WebRTC yet.</br></br>Please use the Chrome or Firefox desktop browsers.
-    #baziga.hide
+    #bazinga.hide
       .text-wrapper
         .editor
           .header
@@ -42,7 +42,7 @@ html(lang="en")
         .sk-circle10.sk-circle
         .sk-circle11.sk-circle
         .sk-circle12.sk-circle
-      p Baziga currently supports Chrome or Firefox desktop browsers.
+      p Bazinga currently supports Chrome or Firefox desktop browsers.
       p <strong>Note:</strong> Chrome v63 introduced a bug that causes sporadic issues. If loading takes longer than 10 sec, please upgrade to Chrome v64 or consider using Firefox.
     script(src="https://cdn.jsdelivr.net/npm/feather-icons/dist/feather.min.js")
     script.
